# realsense-cpp

./: CMakeLists.txt  README.md  install_realsense.sh  package.xml
config/: rs_config.json
include/realsense-cpp/: camera.hpp
launch/: rs_camera.launch.py
realsense_camera/: CMakeLists.txt  package.xml
realsense_camera/include/realsense_camera/: camera.hpp
realsense_camera/launch/: rs_camera.launch.py
realsense_camera/src/: nodelet.cpp
realsense_msgs/: CMakeLists.txt  package.xml
src/: nodelet.cpp
