<?xml version="1.0"?>
<package format="3">
  <name>realsense_camera</name>
  <version>0.0.1</version>
  <description>Realsense CPP library</description>
  <maintainer email="alessandrosaviolo17@gmail.com">Alessandro Saviolo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>
  <depend>realsense2</depend>
  <depend>realsense_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>